@@ -172,16 +172,8 @@ class Field(object):
 
         # Run validators
         if not stop_validation:
-            for validator in itertools.chain(self.validators, extra_validators):
-                try:
-                    validator(form, self)
-                except StopValidation as e:
-                    if e.args and e.args[0]:
-                        self.errors.append(e.args[0])
-                    stop_validation = True
-                    break
-                except ValueError as e:
-                    self.errors.append(e.args[0])
+            chain = itertools.chain(self.validators, extra_validators)
+            stop_validation = self._run_validation_chain(form, chain)
 
         # Call post_validate
         try:
@@ -190,6 +182,26 @@ class Field(object):
             self.errors.append(e.args[0])
 
         return len(self.errors) == 0
+
+    def _run_validation_chain(self, form, validators):
+        """
+        Run a validation chain, stopping if any validator raises StopValidation.
+
+        :param form: The Form instance this field beongs to.
+        :param validators: a sequence or iterable of validator callables.
+        :return: True if validation was stopped, False otherwise.
+        """
+        for validator in validators:
+            try:
+                validator(form, self)
+            except StopValidation as e:
+                if e.args and e.args[0]:
+                    self.errors.append(e.args[0])
+                return True
+            except ValueError as e:
+                self.errors.append(e.args[0])
+
+        return False
 
     def pre_validate(self, form):
         """
@@ -749,8 +761,6 @@ class FieldList(Field):
         super(FieldList, self).__init__(label, validators, default=default, **kwargs)
         if self.filters:
             raise TypeError('FieldList does not accept any filters. Instead, define them on the enclosed field.')
-        if validators:
-            raise TypeError('FieldList does not accept any validators. Instead, define them on the enclosed field.')
         assert isinstance(unbound_field, UnboundField), 'Field must be unbound, not a field class'
         self.unbound_field = unbound_field
         self.min_entries = min_entries
@@ -803,14 +813,24 @@ class FieldList(Field):
                     yield int(k)
 
     def validate(self, form, extra_validators=tuple()):
+        """
+        Validate this FieldList.
+
+        Note that FieldList validation differs from normal field validation in
+        that FieldList validates all its enclosed fields first before running any
+        of its own validators.
+        """
         self.errors = []
-        success = True
+
+        # Run validators on all entries within
         for subfield in self.entries:
             if not subfield.validate(form):
-                success = False
                 self.errors.append(subfield.errors)
 
-        return success
+        chain = itertools.chain(self.validators, extra_validators)
+        stop_validation = self._run_validation_chain(form, chain)
+
+        return len(self.errors) == 0
 
     def populate_obj(self, obj, name):
         values = getattr(obj, name, None)
