@@ -8,6 +8,7 @@ Not yet released.
 - Tests complete in python 3.3.
 - Localization for ru, fr.
 - Minor fixes in documentation for clarity.
+- FieldList now can take validators on the entire FieldList.
 - ext.sqlalchemy model_form:
   * Fix issue in ColumnDefault conversion
   * Support Enum type
